--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,8 @@ title: ""
 # satRday MyCity
 
 ### 21 September, 2023 {style="max-width: fit-content; max-width: -moz-fit-content;"}
+
+#### Venue - Pixi Hotel MyCity
 :::
 
 ::: {#countdown_container .g-col-12 style="background: #eae3d8; align-items: center;color:#5d5d76; text-align:center; margin-top:-1.25em;"}
