--- a/about/about.qmd
+++ b/about/about.qmd
@@ -20,6 +20,6 @@ satRday MyCity will be taking place at MyCity, MyCountry on the 21st September, 
 :::
 
 ::: g-col-6
-![](/img/user-conf.png){.img_block width="1528"}
+![](/img/user-conf.png){.img_block width="100%"}
 :::
 :::
