make countdown a template

--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,12 @@ format:
   html:
     include-after-body:
       - js/countdown.js
+      
+listing:
+  - id: countdown
+    template: countdown.ejs
+    contents: 
+      - datetime: Sept 21, 2023 23:59:00
 ---
 
 ::: grid
@@ -15,18 +21,7 @@ format:
 #### Come join us live \@ Pixi Hotel MyCity
 :::
 
-::: {#countdown_container .g-col-12 style="background: #eae3d8; align-items: center;color:#5d5d76; text-align:center; margin-top:-1.25em;"}
-```{=html}
-
-  <div id="countdown">
-    <h6 id="headline"></h6>
-      <ul>
-        <li style=""><span id="days" class="countdown_date"></span>DAYS</li>
-        <li style=""><span id="hours" class="countdown_date"></span>HOURS</li>
-        <li style=""><span id="minutes" class="countdown_date"></span>MINUTES</li>
-        <li style="border-right: 0px;"><span id="seconds" class="countdown_date"></span>SECONDS</li>
-      </ul>
-  </div>
-```
+::: {#countdown .g-col-12 style="background: #eae3d8; align-items: center;color:#5d5d76; text-align:center; margin-top:-1.25em;"}
 :::
+
 :::
