--- a/about/about.qmd
+++ b/about/about.qmd
@@ -19,7 +19,9 @@ There is a big emphasis on making these event accessible - by not requiring time
 satRday MyCity will be taking place at MyCity, MyCountry on the 21st September, 2023
 :::
 
-::: g-col-6
+::: {.g-col-6 .img_margin}
 ![](/img/user-conf.png){.img_block width="100%"}
 :::
+
+<div></div>
 :::
