--- a/about/sponsors/index.qmd
+++ b/about/sponsors/index.qmd
@@ -15,7 +15,7 @@ listing:
 ::: {#sponsors .g-col-12}
 :::
 
-::: {#sponsorship .g-col-12 .text_block}
+::: {#sponsorship .g-col-12 .full_text_block}
 ## Sponsorship Details
 
 satRday is committed to being an affordable and open conference for all interested R users. To provide highly discounted tickets, we plan to raise \$10,000 with sponsors this year.
