--- a/register.qmd
+++ b/register.qmd
@@ -14,6 +14,7 @@ Please register for the conference at: [satrdays.org](https://satrdays.org)
 :::
 
 ::: {.g-col-6 .img_margin}
-![](/img/user-conf.png){.img_block width="100%"}
+![](/img/background2.jpg){.img_block width="100%"}
 :::
+<div></div>
 :::
